FullQa New/src/objects/Referrer_Event__c.object
<CustomObject>
    <description>Use by NextBee (Vendor) as a fully integrated summary object to track rewards point allocations</description>
    <fields>
        <fullName>Event_Date__c</fullName>
        <label>Event Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Points Issued</fullName>
                </value>
                <value>
                    <fullName>Points Redeemed</fullName>
                </value>
                <value>
                    <fullName>Login</fullName>
                </value>
                <value>
                    <fullName>Level Change</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Referrer__c</fullName>
        <label>Referrer</label>
        <referenceTo>Referrer__c</referenceTo>
        <relationshipLabel>Referrer Events</relationshipLabel>
        <relationshipName>Referrer_Events</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Referrer Event</label>
    <nameField>
        <displayFormat>RefEvent{0000}</displayFormat>
        <label>Referrer Event Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Referrer Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>